--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,42 @@
 version: "3"
 services:
   jaeger:
+    restart: always
     image: jaegertracing/all-in-one:latest
     ports:
       - "16686:16686"
   fake_api:
+    restart: always
     image: jaxgeller/lwan
     volumes:
       - ./data:/lwan/wwwroot
     ports:
       - "8000:8080"
   web:
+    restart: always
     build:
       context: ./web
     ports:
       - "3000:3000"
   kraken_designer:
+    restart: always
     image: devopsfaith/krakendesigner:latest
     ports:
       - 8787:80
   krakend_ce:
+    restart: always
     image: devopsfaith/krakend:0.9.0
     volumes:
       - ./krakend:/etc/krakend
     ports:
       - "1234:1234"
-      - "8080:8080"
+      - "80:8080"
       - "8090:8090"
     depends_on:
       - fake_api
       - jaeger
   jwt_revoke:
+    restart: always
     build:
       context: ./jwt-revoker
     ports:
